setup README for real use created examples and images folder

--- a/test_code_drawing.ipynb
+++ b/test_code_drawing.ipynb
@@ -15,8 +15,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d08fc52e",
+   "metadata": {},
+   "source": [
+    "Nice looking triangles:\n",
+    "PList = [Point(0.8, 0.516), Point(-0.215, -0.557), Point(-0.611, 0.639)]\n",
+    "k = 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "a719b7da",
    "metadata": {},
    "outputs": [
@@ -24,20 +34,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PList = [Point(-0.335, 0.733), Point(0.827, -0.228), Point(-0.755, 0.238)]\n",
-      "k = 1\n",
+      "PList = [Point(-0.084, 0.134), Point(0.797, 0.335), Point(-0.45, -0.86)]\n",
+      "k = 0\n",
       "Tri is CW\n",
-      "Tri is not covered for delta = 0.3\n"
+      "Tri is delta-slim for delta = 0.3\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"750.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"#ff7f00\" stroke-width=\"0.01\" stroke=\"#001a30\" />\n<path d=\"M-0.3346836522047647,-0.7330623815191244 A2.1861097022190745,2.1861097022190745,0,0,0,0.8273201341151848,0.22751039322694822 A54.41171270979917,54.41171270979917,0,0,1,-0.7551645280287342,-0.2384359092060393 A0.5091130935070228,0.5091130935070228,0,0,0,-0.3346836522047638,-0.7330623815191244 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#53565b\" fill-opacity=\"1\" />\n<path d=\"M0.8190939107168653,0.26594522084288585 A0.039924508119961476,0.039924508119961476,0,0,0,0.8446148252168653,0.19298312043148635 A6.836152032069633,6.836152032069633,0,0,1,-0.2937589210959288,-0.7638774331985934 A0.052962436827357295,0.052962436827357295,0,0,0,-0.3837438228394289,-0.7387800673774096 A0.6298434774063222,0.6298434774063222,0,0,1,-0.7693252310152416,-0.28887415148537043 A0.05629810342090426,0.05629810342090426,0,0,0,-0.7513869431233319,-0.1801971274652781 A0.4607612764242699,0.4607612764242699,0,0,0,-0.29518265538127886,-0.4894866311736274 A1.3719183570345734,1.3719183570345734,0,0,0,0.8190939107168653,0.26594522084288585 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#ff9e1b\" fill-opacity=\"0.5\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"750.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"#ff7f00\" stroke-width=\"0.01\" stroke=\"#001a30\" />\n<path d=\"M-0.0844416420053456,-0.13408079992560662 A3.4493066427441796,3.4493066427441796,0,0,0,0.7969971712481276,-0.3349491732542549 A2.7968772665587607,2.7968772665587607,0,0,0,-0.4504064405958528,0.8604427844624243 A4.323054417116918,4.323054417116918,0,0,0,-0.08444164200534665,-0.1340807999256065 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#53565b\" fill-opacity=\"1\" />\n<path d=\"M0.05983083288589598,-0.10289706058176407 A0.14522764896448012,0.14522764896448012,0,0,0,-0.2228750972545353,-0.1688434172952702 A14.280119767428138,14.280119767428138,0,0,0,-0.4583075463426489,0.8577186407624735 A0.008633040969441896,0.008633040969441896,0,0,0,-0.443686829797712,0.8654048889835647 A19.715438773263728,19.715438773263728,0,0,1,0.8172154634501094,-0.30389366930094575 A0.03824261652113506,0.03824261652113506,0,0,0,0.7851345110168179,-0.3705766484567561 A1.5789135565275407,1.5789135565275407,0,0,0,0.03620261105983236,0.0011248947499216122 A1.9508472295480974,1.9508472295480974,0,0,0,0.059830832885894525,-0.1028970605817644 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#ff9e1b\" fill-opacity=\"0.5\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x1e6ef88fb20>"
+       "<drawSvg.drawing.Drawing at 0x1f1c78f9df0>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +94,7 @@
     "\n",
     "#print(delta)\n",
     "#print(np.log(1+2**0.5))\n",
-    "\n",
+    "#d.savePng('triangleDeltaNbh.png')\n",
     "d"
    ]
   }
